# prompt4

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dependency-update.yml  security.yml  test.yml
tests/: test_main.py
